--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,3 +107,9 @@ jobs:
       - name: Run base tests
         run: |
           ./mvnw test -Pauth-server-quarkus -Dtest=VaseksTest -Pdb-postgres -pl testsuite/integration-arquillian/tests/base 2>&1
+
+      - name: Upload traces
+        uses: actions/upload-artifact@v3
+        with:
+          name: h2-traces
+          path: **/keycloakdb.trace.db
