--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
 
       - name: Run base tests
         run: |
-          ./mvnw test -Pauth-server-quarkus -Dtest=H2Reproducer -pl testsuite/integration-arquillian/tests/base 2>&1
+          ./mvnw test -Dtest=H2Reproducer -pl testsuite/integration-arquillian/tests/base 2>&1
 
       - name: Upload traces
         if: always()
