--- a/quarkus/runtime/src/test/resources/META-INF/keycloak.conf
+++ b/quarkus/runtime/src/test/resources/META-INF/keycloak.conf
@@ -2,6 +2,7 @@ spi-hostname-default-frontend-url = ${keycloak.frontendUrl:http://filepropdefaul
 %user-profile.spi-hostname-default-frontend-url = http://filepropprofile.unittest
 log-level=${SOME_LOG_LEVEL:info}
 log-level-io.k8s=${SOME_CATEGORY_LOG_LEVEL}
+KC_LOG_LEVEL_IO_QUARKUS=trace
 config-keystore=src/test/resources/keystore
 config-keystore-password=secret
 
