--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,35 +120,6 @@ jobs:
 
           ./mvnw test -pl "$PROJECTS" -am
 
-  base-integration-tests:
-    name: Base IT
-    needs: build
-    runs-on: ubuntu-latest
-    timeout-minutes: 100
-    strategy:
-      matrix:
-        group: [1, 2, 3, 4, 5, 6]
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-
-      - name: Run base tests
-        run: |
-          TESTS=`testsuite/integration-arquillian/tests/base/testsuites/base-suite.sh ${{ matrix.group }}`
-          echo "Tests: $TESTS"
-          ./mvnw test ${{ env.SUREFIRE_RETRY }} -Pauth-server-quarkus -Dtest=$TESTS -pl testsuite/integration-arquillian/tests/base 2>&1 | misc/log/trimmer.sh
-
-      - uses: ./.github/actions/upload-flaky-tests
-        name: Upload flaky tests
-        env:
-          GH_TOKEN: ${{ github.token }}
-        with:
-          job-name: Base IT
-
   adapter-integration-tests:
     name: Adapter IT
     needs: build
@@ -211,91 +182,15 @@ jobs:
         with:
           job-name: Adapter IT Strict Cookies
 
-  quarkus-unit-tests:
-    name: Quarkus UT
-    needs: [build, conditional]
-    if: needs.conditional.outputs.ci-quarkus == 'true'
-    timeout-minutes: 15
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, windows-latest ]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      # We want to download Keycloak artifacts
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-
-      - name: Run unit tests
-        run: |
-          ./mvnw test -f quarkus/pom.xml -pl '!tests,!tests/junit5,!tests/integration,!dist'
-
-  quarkus-integration-tests:
-    name: Quarkus IT
-    needs: [build, conditional]
-    timeout-minutes: 115
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        suite: [zip-slow, zip-fast, container, storage, smoke]
-        full-testsuite:
-          - ${{ needs.conditional.outputs.ci-quarkus == 'true' }}
-        # Win runs always as includes are evaluated after excludes
-        include:
-          - os: windows-latest
-            suite: win
-        # Either run smoke tests, or full testsuite
-        exclude:
-          - full-testsuite: false
-            suite: zip-slow
-          - full-testsuite: false
-            suite: zip-fast
-          - full-testsuite: false
-            suite: container
-          - full-testsuite: false
-            suite: storage
-          - full-testsuite: true
-            suite: smoke
-      fail-fast: false
-    runs-on: ${{ matrix.os }}
-    env:
-      MAVEN_OPTS: -Xmx1536m
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-
-      # Smoke tests should cover scenarios that could be broken by changes in other modules that quarkus
-      # test classes and even individual tests are included in the following suites by junit tags
-      # kc.quarkus.tests.groups acts as the tag filter
-      - name: Run Quarkus integration Tests
-        run: |
-          declare -A PARAMS
-          PARAMS["win"]="-Dkc.quarkus.tests.groups=win"
-          PARAMS["zip-slow"]="-Dkc.quarkus.tests.groups=slow"
-          PARAMS["zip-fast"]='-Dkc.quarkus.tests.groups=!slow'
-          PARAMS["container"]="-Dkc.quarkus.tests.dist=docker"
-          PARAMS["storage"]="-Ptest-database"
-          PARAMS["smoke"]="-Dkc.quarkus.tests.groups=smoke"
-
-          if [ "${{ matrix.suite }}" == "container" ]; then
-            ./mvnw install -pl quarkus/tests/integration -am -DskipTests
-          fi
-          ./mvnw test -pl quarkus/tests/integration ${PARAMS["${{ matrix.suite }}"]} 2>&1 | misc/log/trimmer.sh
-
   jdk-integration-tests:
     name: Java Distribution IT
     needs: build
     timeout-minutes: 100
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [windows-latest]
         dist: [temurin]
-        version: [17, 25]
+        version: [17, 21, 25]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -313,27 +208,9 @@ jobs:
 
       - name: Run new base tests
         run: ./mvnw package -f tests/pom.xml -Dtest=JDKTestSuite
-
-      - name: Run base tests
-        run: |
-          TESTS=`testsuite/integration-arquillian/tests/base/testsuites/suite.sh jdk`
-          echo "Tests: $TESTS"
-          if [ "$OSTYPE" == "msys" ]; then
-            ./mvnw test ${{ env.SUREFIRE_RETRY }} -Pauth-server-quarkus -Dtest=$TESTS  "-Dwebdriver.chrome.driver=$ChromeWebDriver/chromedriver.exe" -pl testsuite/integration-arquillian/tests/base 2>&1 | misc/log/trimmer.sh
-          else
-            ./mvnw test ${{ env.SUREFIRE_RETRY }} -Pauth-server-quarkus -Dtest=$TESTS  "-Dwebdriver.chrome.driver=$CHROMEWEBDRIVER/chromedriver"     -pl testsuite/integration-arquillian/tests/base 2>&1 | misc/log/trimmer.sh
-          fi
-
-      - name: Build with JDK
-        run:
-          ./mvnw install -e -DskipTests -DskipExamples -DskipProtoLock=true
-
-      - uses: ./.github/actions/upload-flaky-tests
-        name: Upload flaky tests
-        env:
-          GH_TOKEN: ${{ github.token }}
-        with:
-          job-name: Java Distribution IT
+        
+      - name: Run ResourceLoaderTest
+        run: ./mvnw package -f services/pom.xml -Dtest=ResourceLoaderTest
 
   login-v1-tests:
     name: Login Theme v1 tests
@@ -359,32 +236,6 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         with:
           job-name: Login Theme v1 tests
-
-  volatile-sessions-tests:
-    name: Volatile Sessions IT
-    needs: [build, conditional]
-    if: needs.conditional.outputs.ci-store == 'true'
-    runs-on: ubuntu-latest
-    timeout-minutes: 150
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-
-      - name: Run base tests
-        run: |
-          TESTS=`testsuite/integration-arquillian/tests/base/testsuites/suite.sh volatile-sessions`
-          echo "Tests: $TESTS"
-          ./mvnw test ${{ env.SUREFIRE_RETRY }} -Pauth-server-quarkus "-Dwebdriver.chrome.driver=$CHROMEWEBDRIVER/chromedriver" -Dauth.server.feature.disable=persistent-user-sessions -Dtest=$TESTS -pl testsuite/integration-arquillian/tests/base 2>&1 | misc/log/trimmer.sh
-
-      - uses: ./.github/actions/upload-flaky-tests
-        name: Upload flaky tests
-        env:
-          GH_TOKEN: ${{ github.token }}
-        with:
-          job-name: Volatile Sessions IT
 
   external-infinispan-tests:
     name: External Infinispan IT
@@ -569,288 +420,6 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
 
-  store-integration-tests:
-    name: Store IT
-    needs: build
-    runs-on: ubuntu-latest
-    timeout-minutes: 75
-    strategy:
-      matrix:
-        db: [postgres, mysql, oracle, mssql, mariadb, tidb]
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: run-store-tests
-        name: Run Store Integration Tests - ${{ matrix.db }}
-        uses: ./.github/actions/run-store-tests
-        with:
-            db: ${{ matrix.db }}
-
-  store-integration-tests-additional:
-    name: Store IT (additional)
-    needs: build
-    runs-on: ubuntu-latest
-    timeout-minutes: 75
-    if: needs.conditional.outputs.ci-additional-dbs == 'true'
-    strategy:
-      matrix:
-        db: [edb]
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - name: Login to Quay.io
-        uses: docker/login-action@184bdaa0721073962dff0199f1fb9940f07167d1 # v3.5.0
-        with:
-          username: ${{ secrets.PRIVATE_DBS_QUAY_USERNAME }}
-          password: ${{ secrets.PRIVATE_DBS_QUAY_TOKEN }}
-          registry: quay.io
-
-      - id: run-store-tests
-        name: Run Store Integration Tests - ${{ matrix.db }}
-        uses: ./.github/actions/run-store-tests
-        with:
-          db: ${{ matrix.db }}
-
-  store-model-tests:
-    name: Store Model Tests
-    runs-on: ubuntu-latest
-    needs: [build, conditional]
-    if: needs.conditional.outputs.ci-store == 'true'
-    timeout-minutes: 75
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-
-      - name: Run model tests
-        run: testsuite/model/test-all-profiles.sh ${{ env.SUREFIRE_RETRY }}
-
-      - uses: ./.github/actions/upload-flaky-tests
-        name: Upload flaky tests
-        env:
-          GH_TOKEN: ${{ github.token }}
-        with:
-          job-name: Store Model Tests
-
-  clustering-integration-tests:
-    name: Clustering IT
-    needs: build
-    runs-on: ubuntu-latest
-    timeout-minutes: 35
-    env:
-      MAVEN_OPTS: -Xmx1536m
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-
-      - name: Run cluster tests
-        run: |
-          ./mvnw test ${{ env.SUREFIRE_RETRY }} -Pauth-server-cluster-quarkus,db-postgres "-Dwebdriver.chrome.driver=$CHROMEWEBDRIVER/chromedriver" -Dsession.cache.owners=2 -Dtest=**.cluster.** -pl testsuite/integration-arquillian/tests/base 2>&1 | misc/log/trimmer.sh
-
-      - uses: ./.github/actions/upload-flaky-tests
-        name: Upload flaky tests
-        env:
-          GH_TOKEN: ${{ github.token }}
-        with:
-          job-name: Clustering IT
-
-  fips-unit-tests:
-    name: FIPS UT
-    runs-on: ubuntu-latest
-    needs: build
-    timeout-minutes: 20
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: unit-test-setup
-        name: Unit test setup
-        uses: ./.github/actions/unit-test-setup
-
-      - name: Fake fips
-        run: |
-          cd .github/fake_fips
-          make
-          sudo insmod fake_fips.ko
-
-      - name: Run crypto tests
-        run: docker run --rm --workdir /github/workspace -v "${{ github.workspace }}":"/github/workspace" -v "$HOME/.m2":"/root/.m2" registry.access.redhat.com/ubi8/ubi:latest .github/scripts/run-fips-ut.sh
-
-  fips-integration-tests:
-    name: FIPS IT
-    needs: build
-    runs-on: ubuntu-latest
-    timeout-minutes: 45
-    strategy:
-      matrix:
-        mode: [non-strict, strict]
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-        with:
-          jdk-version: 21
-
-      - name: Fake fips
-        run: |
-          cd .github/fake_fips
-          make
-          sudo insmod fake_fips.ko
-
-      - name: Run base tests
-        run: docker run --rm --workdir /github/workspace -e "SUREFIRE_RERUN_FAILING_COUNT" -v "${{ github.workspace }}":"/github/workspace" -v "$HOME/.m2":"/root/.m2" registry.access.redhat.com/ubi8/ubi:latest .github/scripts/run-fips-it.sh ${{ matrix.mode }}
-
-      - uses: ./.github/actions/upload-flaky-tests
-        name: Upload flaky tests
-        env:
-          GH_TOKEN: ${{ github.token }}
-        with:
-          job-name: FIPS IT
-
-  forms-integration-tests:
-    name: Forms IT
-    runs-on: ubuntu-latest
-    needs: build
-    timeout-minutes: 75
-    strategy:
-      matrix:
-        browser: [chrome, firefox]
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-
-      - uses: ./.github/actions/install-chrome
-        if: matrix.browser == 'chrome'
-
-      - name: Run Forms IT
-        run: |
-          TESTS=`testsuite/integration-arquillian/tests/base/testsuites/suite.sh forms`
-          echo "Tests: $TESTS"
-          ./mvnw test ${{ env.SUREFIRE_RETRY }} -Pauth-server-quarkus -Dtest=$TESTS -Dbrowser=${{ matrix.browser }} -f testsuite/integration-arquillian/tests/base/pom.xml 2>&1 | misc/log/trimmer.sh
-
-      - uses: ./.github/actions/upload-flaky-tests
-        name: Upload flaky tests
-        env:
-          GH_TOKEN: ${{ github.token }}
-        with:
-          job-name: Forms IT
-
-  webauthn-integration-tests:
-    name: WebAuthn IT
-    if: needs.conditional.outputs.ci-webauthn == 'true'
-    runs-on: ubuntu-latest
-    needs: build
-    timeout-minutes: 45
-    strategy:
-      matrix:
-        browser:
-          - chrome
-          - firefox
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-
-      - uses: ./.github/actions/install-chrome
-        if: matrix.browser == 'chrome'
-
-      - name: Run WebAuthn IT
-        run: |
-          TESTS=`testsuite/integration-arquillian/tests/base/testsuites/suite.sh webauthn`
-          echo "Tests: $TESTS"
-          ./mvnw test ${{ env.SUREFIRE_RETRY }} -Pauth-server-quarkus -Dtest=$TESTS -Dbrowser=${{ matrix.browser }} "-Dwebdriver.chrome.driver=$CHROMEWEBDRIVER/chromedriver" "-Dwebdriver.gecko.driver=$GECKOWEBDRIVER/geckodriver" -pl testsuite/integration-arquillian/tests/base 2>&1 | misc/log/trimmer.sh
-
-      - uses: ./.github/actions/upload-flaky-tests
-        name: Upload flaky tests
-        env:
-          GH_TOKEN: ${{ github.token }}
-        with:
-          job-name: WebAuthn IT
-
-  sssd-unit-tests:
-    name: SSSD
-    runs-on: ubuntu-latest
-    if: needs.conditional.outputs.ci-sssd == 'true'
-    needs:
-      - conditional
-      - build
-    timeout-minutes: 30
-    steps:
-      - name: checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-
-      - id: weekly-cache-key
-        name: Key for weekly rotation of cache
-        shell: bash
-        run: echo "key=ipa-data-`date -u "+%Y-%U"`" >> $GITHUB_OUTPUT
-
-      - id: cache-maven-repository
-        name: ipa-data cache
-        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4.3.0
-        with:
-          path: ~/ipa-data.tar
-          key: ${{ steps.weekly-cache-key.outputs.key }}
-
-      - name: Run tests
-        run: .github/scripts/run-ipa.sh "${{ github.workspace }}"
-
-  migration-tests:
-    name: Migration Tests
-    runs-on: ubuntu-latest
-    needs: build
-    timeout-minutes: 45
-    strategy:
-      matrix:
-        old-version: [24.0.4]
-        database: [postgres, mysql, oracle, mssql, mariadb]
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-
-      - name: Run Migration Tests
-        run: |
-          ./mvnw clean install ${{ env.SUREFIRE_RETRY }} \
-          -Pauth-server-quarkus -Pdb-${{ matrix.database }} -Pauth-server-migration \
-          -Dtest=MigrationTest \
-          -Dmigration.mode=auto \
-          -Dmigrated.auth.server.version=${{ matrix.old-version }} \
-          -Dmigration.import.file.name=migration-realm-${{ matrix.old-version }}.json \
-          -Dauth.server.ssl.required=false \
-          -Dauth.server.db.host=localhost \
-          "-Dwebdriver.chrome.driver=$CHROMEWEBDRIVER/chromedriver" \
-          -f testsuite/integration-arquillian/pom.xml 2>&1 | misc/log/trimmer.sh
-
-      - uses: ./.github/actions/upload-flaky-tests
-        name: Upload flaky tests
-        env:
-          GH_TOKEN: ${{ github.token }}
-        with:
-          job-name: Migration Tests
-
   test-framework:
     name: Test Framework
     runs-on: ubuntu-latest
@@ -865,27 +434,6 @@ jobs:
 
       - name: Run tests
         run: ./mvnw package -f test-framework/pom.xml
-
-  base-new-integration-tests:
-    name: Base IT (new)
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    timeout-minutes: 45
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - id: integration-test-setup
-        name: Integration test setup
-        uses: ./.github/actions/integration-test-setup
-
-        # This step is necessary because test/clustering requires building a new Keycloak image built from tar.gz
-        # file that is not part of m2-keycloak.tzts archive
-      - name: Build tar keycloak-quarkus-dist
-        run: ./mvnw package -pl quarkus/server/,quarkus/dist/
-
-      - name: Run tests
-        run: ./mvnw package -f tests/pom.xml
 
   mixed-cluster-compatibility-tests:
     name: Cluster Compatibility Tests
@@ -924,25 +472,11 @@ jobs:
       - conditional
       - build
       - unit-tests
-      - base-integration-tests
       - adapter-integration-tests
       - adapter-integration-tests-strict-cookies
-      - quarkus-unit-tests
-      - quarkus-integration-tests
       - jdk-integration-tests
-      - store-integration-tests
-      - volatile-sessions-tests
-      - store-model-tests
-      - clustering-integration-tests
-      - fips-unit-tests
-      - fips-integration-tests
-      - forms-integration-tests
-      - webauthn-integration-tests
-      - sssd-unit-tests
-      - migration-tests
       - external-infinispan-tests
       - test-framework
-      - base-new-integration-tests
       - mixed-cluster-compatibility-tests
     runs-on: ubuntu-latest
     steps:
