--- a/tests/base/src/test/resources/keycloak-test.properties
+++ b/tests/base/src/test/resources/keycloak-test.properties
@@ -6,6 +6,6 @@ kc.test.log.category."org.keycloak.tests".level=INFO
 
 kc.test.log.category."testinfo".level=INFO
 kc.test.log.category."org.keycloak".level=WARN
-kc.test.log.category."managed.keycloak".level=WARN
+kc.test.log.category."managed.keycloak".level=INFO
 kc.test.log.category."managed.db".level=WARN
 kc.test.log.category."managed.infinispan".level=WARN
