updating test containers for 3.31.0.CR1
also adding a managed version for microprofile-metrics-api

Signed-off-by: Steve Hawkins <shawkins@redhat.com>

--- a/test-framework/db-tidb/pom.xml
+++ b/test-framework/db-tidb/pom.xml
@@ -39,7 +39,7 @@
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
-            <artifactId>tidb</artifactId>
+            <artifactId>testcontainers-tidb</artifactId>
         </dependency>
     </dependencies>
 </project>
