--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
         <h2.version>2.4.240</h2.version>
         <hibernate-orm.plugin.version>6.2.13.Final</hibernate-orm.plugin.version>
         <hibernate.c3p0.version>6.2.13.Final</hibernate.c3p0.version>
+        <microprofile-metrics-api.version>5.1.2</microprofile-metrics-api.version>
         <hibernate-validator.version>9.0.1.Final</hibernate-validator.version>
         <infinispan.version>16.0.5</infinispan.version>
         <protostream.version>6.0.3</protostream.version> <!-- For the annotation processor: keep in sync with the version shipped with Infinispan -->
@@ -1336,6 +1337,12 @@
                 <artifactId>infinispan-core</artifactId>
                 <type>test-jar</type>
                 <version>${infinispan.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.microprofile.metrics</groupId>
+                <artifactId>microprofile-metrics-api</artifactId>
+                <scope>test</scope>
+                <version>${microprofile-metrics-api.version}</version>
             </dependency>
 
         </dependencies>
