excluding quarkus-bootstrap-runner to prevent trace logging
Signed-off-by: Steve Hawkins <shawkins@redhat.com>

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -121,6 +121,12 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-micrometer</artifactId>
             <scope>provided</scope>
+            <exclusions>
+            	<exclusion>
+            		<groupId>io.quarkus</groupId>
+            		<artifactId>quarkus-bootstrap-runner</artifactId>
+            	</exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
